# EnergyModelsLanguageInterfaces.jl

./: .gitignore  .gitlab-ci.yml  .gitmodules  NEWS.md  Project.toml  README.md
.github/actions/before-script/: action.yml
.github/workflows/: ci.yml  documentation.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/examples/sampling/: index.html
dev/how-to/contribute/: index.html
dev/how-to/utilize/: index.html
dev/manual/NEWS/: index.html
dev/manual/quick-start/: index.html
dev/manual/simple-example/: index.html
dev/nodes/biochp/: index.html
dev/nodes/multiplebuildingtypes/: index.html
dev/nodes/pv/: index.html
dev/nodes/pvandcsp/: index.html
dev/nodes/windpower/: index.html
dev/resources/resourcebio/: index.html
docs/: Project.toml  make.jl
docs/src/: index.md
docs/src/nodes/: pv.md  (+4 more)
ext/EMGUIExt/: descriptive_names.yml
ext/EMIExt/: EMIExt.jl
src/: EnergyModelsLanguageInterfaces.jl  EnergyModelsUtilities.jl  checks.jl  constraint_functions.jl  datastructures.jl  macros.jl  model.jl  utils.jl
test/: Aqua.jl  JuliaFormatter.jl  Project.toml  runtests.jl  test_CSPandPV.jl  test_PV.jl  test_bioCHP.jl  test_buildings.jl  test_checks.jl  test_sampling_routines.jl  test_utils.jl  test_windpower.jl  utils.jl
test/cpp_module/: doubling.cpp
test/doubling_module/: doubling.c  doubling.jl
test/python_module/: README.md  optimization_module.py  pyproject.toml
test/python_module/src/test_python_sampling/: __init__.py  optimization_module.py
test/trippling_module/: CMakeLists.txt  README.md  trippling.cpp
(+15 files in other folders)
